Removed unnecessary code from NewsActivity in regards to onCreateLoader, due to accidentally using next lesson's code files instead of previous lesson. Replaced more instances of 'author' with 'section'. XML layout barely loads, then app stops.

--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -35,13 +35,13 @@
             tools:text="09-06-2018"/>
 
         <TextView
-            android:id="@+id/article_author"
+            android:id="@+id/article_section"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_gravity="start"
             android:textColor="@android:color/white"
-            tools:text="Yoko Shimomura"/>
+            tools:text="Games"/>
 
     </LinearLayout>
 
