--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <fragment
-        android:name="com.shorelineapps.nintendo_news.SettingsActivity$EarthquakePreferenceFragment"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.example.android.quakereport.SettingsActivity">
-    </fragment>
-
-</android.support.constraint.ConstraintLayout>
+<fragment
+    android:name="com.shorelineapps.nintendo_news.SettingsActivity$NewsPreferenceFragment"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.shorelineapps.nintendo_news.SettingsActivity">
+</fragment>
