--- a/app/src/main/res/xml/settings_main.xml
+++ b/app/src/main/res/xml/settings_main.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <string-array name="settings_order_by_labels">
-        <item>@string/settings_order_by_magnitude_label</item>
-        <item>@string/settings_order_by_most_recent_label</item>
-    </string-array>
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:title="@string/settings_title">
 
-    <string-array name="settings_order_by_values">
-        <item>@string/settings_order_by_magnitude_value</item>
-        <item>@string/settings_order_by_most_recent_value</item>
-    </string-array>
-</resources>
+    <ListPreference
+        android:defaultValue="@string/settings_order_by_default"
+        android:entries="@array/settings_order_by_labels"
+        android:entryValues="@array/settings_order_by_values"
+        android:key="@string/settings_order_by_key"
+        android:title="@string/settings_order_by_label" />
+
+</PreferenceScreen>
