--- a/app/src/main/res/xml/settings_main.xml
+++ b/app/src/main/res/xml/settings_main.xml
@@ -3,6 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/settings_title">
 
+    <EditTextPreference
+        android:defaultValue="@string/settings_max_articles_default"
+        android:inputType="number"
+        android:key="@string/settings_max_articles_key"
+        android:selectAllOnFocus="true"
+        android:title="@string/settings_max_articles_label" />
+
     <ListPreference
         android:defaultValue="@string/settings_order_by_default"
         android:entries="@array/settings_order_by_labels"
