Added in search ability in settings. Changed name from Nintendo News to Quick Reads for generalization. Next, come up with final name, change color scheme and add in images.

--- a/app/src/main/res/xml/settings_main.xml
+++ b/app/src/main/res/xml/settings_main.xml
@@ -4,6 +4,13 @@
     android:title="@string/settings_title">
 
     <EditTextPreference
+        android:defaultValue="@string/settings_search_default"
+        android:inputType="textNoSuggestions"
+        android:key="@string/settings_search_key"
+        android:selectAllOnFocus="true"
+        android:title="@string/settings_search_label" />
+
+    <EditTextPreference
         android:defaultValue="@string/settings_max_articles_default"
         android:inputType="number"
         android:key="@string/settings_max_articles_key"
